# tiger

./: Cargo.toml  LICENSE  README.md  dune  tiger.opam
.cargo/: config
.circleci/: config.yml
ast/: Cargo.toml
ast/src/: lib.rs  symbol.rs
lib/ast/: ast.ml  dune
lib/canonical/: canon.ml  canon.mli  dune
lib/codegen/: assem.ml  assem.mli  dune  gen.ml  gen.mli  mnemonic_lex.mli
lib/common/: assem.ml  assem.mli  dune  ir.ml  mnemonic_lex.mll  symbol.mli  symtab.ml  symtab.mli  temp.ml  temp.mli
lib/errors/: dune  errors.ml  errors.mli
lib/ir/: dune
lib/lex/: dune  lexer.mli  lexer.mll  token.ml
lib/lexer/: dune  lex.mll
lib/parse/: ast.ml  dune  myparser.mly  parser.mly  symbol.ml  symbol.mli
lib/platform/: dummy_gen.ml  dummy_platf.ml  dune  mips_gen.ml  mips_platf.ml
lib/semantic/: analyzer.ml  analyzer.mli  dummy_frame.ml  dummy_platf.ml  dune  env.ml  env.mli  find_escape.ml  find_escape.mli  frame.ml  ir.ml  platform.ml  symtab.ml  symtab.mli  temp.ml  temp.mli  translate.ml  translate.mli  type.ml  type.mli
lib/utils/: dune  exn.ml  exn.mli  list.ml  list.mli  utils.ml  utils.mli
parser/: Cargo.toml
parser/src/: lib.rs  parser.pg  parser.rs
stdlib/: manifest.txt
test/canonical/: dune  test_basic_block.ml  test_linearize.ml  test_trace.ml
test/lex/: dune  test_lex.ml
test/lexer/: dune  test_lex.ml
test/parse/: dune  test_parse.ml
test/platform/: dune  test_mips_codegen.ml
test/semantic/: dune  test_find_escape.ml  test_ir_translator.ml  test_semantic.ml  test_typecheck.ml
